@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2016 IBM Corp.
+ * Copyright (c) 2009, 2018 IBM Corp and others.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -17,6 +17,7 @@
  *    James Sutton - Ping Callback (bug 473928)
  *    Ian Craggs - fix for NPE bug 470718
  *    James Sutton - Automatic Reconnect & Offline Buffering
+ *    Jens Reimann - Fix issue #370
  */
 package org.eclipse.paho.client.mqttv3.internal;
 
@@ -25,8 +26,10 @@ import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.Properties;
 import java.util.Vector;
+import java.util.concurrent.TimeUnit;
 
 import org.eclipse.paho.client.mqttv3.IMqttActionListener;
+import org.eclipse.paho.client.mqttv3.IMqttDeliveryToken;
 import org.eclipse.paho.client.mqttv3.MqttClientPersistence;
 import org.eclipse.paho.client.mqttv3.MqttDeliveryToken;
 import org.eclipse.paho.client.mqttv3.MqttException;
@@ -45,6 +48,10 @@ import org.eclipse.paho.client.mqttv3.internal.wire.MqttPubComp;
 import org.eclipse.paho.client.mqttv3.internal.wire.MqttPubRec;
 import org.eclipse.paho.client.mqttv3.internal.wire.MqttPubRel;
 import org.eclipse.paho.client.mqttv3.internal.wire.MqttPublish;
+import org.eclipse.paho.client.mqttv3.internal.wire.MqttSuback;
+import org.eclipse.paho.client.mqttv3.internal.wire.MqttSubscribe;
+import org.eclipse.paho.client.mqttv3.internal.wire.MqttUnsubAck;
+import org.eclipse.paho.client.mqttv3.internal.wire.MqttUnsubscribe;
 import org.eclipse.paho.client.mqttv3.internal.wire.MqttWireMessage;
 import org.eclipse.paho.client.mqttv3.logging.Logger;
 import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
@@ -95,7 +102,7 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
  */
 public class ClientState {
 	private static final String CLASS_NAME = ClientState.class.getName();
-	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
+	private Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
 	private static final String PERSISTENCE_SENT_PREFIX = "s-";
 	private static final String PERSISTENCE_SENT_BUFFERED_PREFIX = "sb-";
 	private static final String PERSISTENCE_CONFIRMED_PREFIX = "sc-";
@@ -170,10 +177,14 @@ public class ClientState {
         pendingMessages = new Vector(this.maxInflight);
     }
     protected void setKeepAliveSecs(long keepAliveSecs) {
-		this.keepAlive = keepAliveSecs*1000;
+		this.keepAlive = TimeUnit.SECONDS.toNanos(keepAliveSecs);
 	}
+    /**
+     * Returns the keepAlive in Milliseconds
+     * @return The KeepAlive value in Milliseconds
+     */
 	protected long getKeepAlive() {
-		return this.keepAlive;
+		return TimeUnit.NANOSECONDS.toMillis(this.keepAlive);
 	}
 	protected void setCleanSession(boolean cleanSession) {
 		this.cleanSession = cleanSession;
@@ -184,6 +195,10 @@ public class ClientState {
 	
 	private String getSendPersistenceKey(MqttWireMessage message) {
 		return PERSISTENCE_SENT_PREFIX + message.getMessageId();
+	}
+	
+	private String getSendPersistenceKey(int messageId) {
+		return PERSISTENCE_SENT_PREFIX + messageId;
 	}
 	
 	private String getSendConfirmPersistenceKey(MqttWireMessage message) {
@@ -310,6 +325,7 @@ public class ClientState {
 	
 	/**
 	 * Restores the state information from persistence.
+	 * @throws MqttException if an exception occurs whilst restoring state
 	 */
 	protected void restoreState() throws MqttException {
 		final String methodName = "restoreState";
@@ -331,7 +347,7 @@ public class ClientState {
 					log.fine(CLASS_NAME,methodName,"604", new Object[]{key,message});
 
 					// The inbound messages that we have persisted will be QoS 2 
-					inboundQoS2.put(new Integer(message.getMessageId()),message);
+					inboundQoS2.put( Integer.valueOf(message.getMessageId()),message);
 				} else if (key.startsWith(PERSISTENCE_SENT_PREFIX)) {
 					MqttPublish sendMessage = (MqttPublish) message;
 					highestMsgId = Math.max(sendMessage.getMessageId(), highestMsgId);
@@ -346,7 +362,7 @@ public class ClientState {
 							//@TRACE 605=outbound QoS 2 pubrel key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "605", new Object[]{key,message});
 
-							outboundQoS2.put(new Integer(confirmMessage.getMessageId()), confirmMessage);
+							outboundQoS2.put( Integer.valueOf(confirmMessage.getMessageId()), confirmMessage);
 						} else {
 							//@TRACE 606=outbound QoS 2 completed key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "606", new Object[]{key,message});
@@ -359,17 +375,17 @@ public class ClientState {
 							//@TRACE 607=outbound QoS 2 publish key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
 							
-							outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS2.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						} else {
 							//@TRACE 608=outbound QoS 1 publish key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
 
-							outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS1.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						}
 					}
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put( Integer.valueOf(sendMessage.getMessageId()), Integer.valueOf(sendMessage.getMessageId()));
 				} else if(key.startsWith(PERSISTENCE_SENT_BUFFERED_PREFIX)){
 					
 					// Buffered outgoing messages that have not yet been sent at all
@@ -378,17 +394,17 @@ public class ClientState {
 					if(sendMessage.getMessage().getQos() == 2){
 						//@TRACE 607=outbound QoS 2 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
-						outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+						outboundQoS2.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 					} else if(sendMessage.getMessage().getQos() == 1){
 						//@TRACE 608=outbound QoS 1 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
 
-						outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+						outboundQoS1.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						
 					} else {
 						//@TRACE 511=outbound QoS 0 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "511", new Object[]{key,message});
-						outboundQoS0.put(new Integer(sendMessage.getMessageId()), sendMessage);
+						outboundQoS0.put( Integer.valueOf(sendMessage.getMessageId()), sendMessage);
 						// Because there is no Puback, we have to trust that this is enough to send the message
 						persistence.remove(key);
 						
@@ -396,7 +412,7 @@ public class ClientState {
 					
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put( Integer.valueOf(sendMessage.getMessageId()), Integer.valueOf(sendMessage.getMessageId()));
 					
 					
 				} else if (key.startsWith(PERSISTENCE_CONFIRMED_PREFIX)) {
@@ -473,14 +489,26 @@ public class ClientState {
 	 * 
 	 * @param message  the message to send
 	 * @param token the token that can be used to track delivery of the message
-	 * @throws MqttException
+	 * @throws MqttException if an exception occurs whilst sending the message
 	 */
 	public void send(MqttWireMessage message, MqttToken token) throws MqttException {
 		final String methodName = "send";
 		if (message.isMessageIdRequired() && (message.getMessageId() == 0)) {
-			message.setMessageId(getNextMessageId());
+				if(message instanceof MqttPublish  && (((MqttPublish) message).getMessage().getQos() != 0)){
+						message.setMessageId(getNextMessageId());
+				}else if(message instanceof MqttPubAck ||
+						message instanceof MqttPubRec ||
+						message instanceof MqttPubRel ||
+						message instanceof MqttPubComp ||
+						message instanceof MqttSubscribe ||
+						message instanceof MqttSuback ||
+						message instanceof MqttUnsubscribe || 
+						message instanceof MqttUnsubAck){
+					message.setMessageId(getNextMessageId());
+				}
 		}
-		if (token != null ) {
+		if (token != null) {
+			message.setToken(token);
 			try {
 				token.internalTok.setMessageID(message.getMessageId());
 			} catch (Exception e) {
@@ -491,32 +519,33 @@ public class ClientState {
 			synchronized (queueLock) {
 				if (actualInFlight >= this.maxInflight) {
 					//@TRACE 613= sending {0} msgs at max inflight window
-					log.fine(CLASS_NAME, methodName, "613", new Object[]{new Integer(actualInFlight)});
+					log.fine(CLASS_NAME, methodName, "613", new Object[]{ Integer.valueOf(actualInFlight)});
 
 					throw new MqttException(MqttException.REASON_CODE_MAX_INFLIGHT);
 				}
 				
 				MqttMessage innerMessage = ((MqttPublish) message).getMessage();
 				//@TRACE 628=pending publish key={0} qos={1} message={2}
-				log.fine(CLASS_NAME,methodName,"628", new Object[]{new Integer(message.getMessageId()), new Integer(innerMessage.getQos()), message});
+				log.fine(CLASS_NAME,methodName,"628", new Object[]{ Integer.valueOf(message.getMessageId()),  Integer.valueOf(innerMessage.getQos()), message});
 
 				switch(innerMessage.getQos()) {
 					case 2:
-						outboundQoS2.put(new Integer(message.getMessageId()), message);
+						outboundQoS2.put( Integer.valueOf(message.getMessageId()), message);
 						persistence.put(getSendPersistenceKey(message), (MqttPublish) message);
+						tokenStore.saveToken(token, message);
 						break;
 					case 1:
-						outboundQoS1.put(new Integer(message.getMessageId()), message);
+						outboundQoS1.put( Integer.valueOf(message.getMessageId()), message);
 						persistence.put(getSendPersistenceKey(message), (MqttPublish) message);
+						tokenStore.saveToken(token, message);
 						break;
 				}
-				tokenStore.saveToken(token, message);
 				pendingMessages.addElement(message);
 				queueLock.notifyAll();
 			}
 		} else {
 			//@TRACE 615=pending send key={0} message {1}
-			log.fine(CLASS_NAME,methodName,"615", new Object[]{new Integer(message.getMessageId()), message});
+			log.fine(CLASS_NAME,methodName,"615", new Object[]{ Integer.valueOf(message.getMessageId()), message});
 			
 			if (message instanceof MqttConnect) {
 				synchronized (queueLock) {
@@ -531,7 +560,7 @@ public class ClientState {
 					this.pingCommand = message;
 				}
 				else if (message instanceof MqttPubRel) {
-					outboundQoS2.put(new Integer(message.getMessageId()), message);
+					outboundQoS2.put( Integer.valueOf(message.getMessageId()), message);
 					persistence.put(getSendConfirmPersistenceKey(message), (MqttPubRel) message);
 				}
 				else if (message instanceof MqttPubComp)  {
@@ -552,8 +581,7 @@ public class ClientState {
 	/**
 	 * Persists a buffered message to the persistence layer
 	 * 
-	 * @param message
-	 * @throws MqttPersistenceException
+	 * @param message The {@link MqttWireMessage} to persist
 	 */
 	public void persistBufferedMessage(MqttWireMessage message) {
 		final String methodName = "persistBufferedMessage";
@@ -562,13 +590,13 @@ public class ClientState {
 		// Because the client will have disconnected, we will want to re-open persistence
 		try {
 			message.setMessageId(getNextMessageId());
+			key = getSendBufferedPersistenceKey(message);
 			try {
 				persistence.put(key, (MqttPublish) message);
 			} catch (MqttPersistenceException mpe){
 				//@TRACE 515=Could not Persist, attempting to Re-Open Persistence Store
 				log.fine(CLASS_NAME,methodName, "515");
-				// TODO - Relies on https://github.com/eclipse/paho.mqtt.java/issues/178
-				persistence.open(this.clientComms.getClient().getClientId(), this.clientComms.getClient().getClientId());
+				persistence.open(this.clientComms.getClient().getClientId(), this.clientComms.getClient().getServerURI());
 				persistence.put(key, (MqttPublish) message);
 			}
 			//@TRACE 513=Persisted Buffered Message key={0}
@@ -579,34 +607,83 @@ public class ClientState {
 		} 
 	}
 	
-	public void unPersistBufferedMessage(MqttWireMessage message) throws MqttPersistenceException {
+	/**
+	 * @param message The {@link MqttWireMessage} to un-persist
+	 */
+	public void unPersistBufferedMessage(MqttWireMessage message){
 		final String methodName = "unPersistBufferedMessage";
-		//@TRACE 515=Un-Persisting Buffered message key={0}
-		log.fine(CLASS_NAME,methodName, "513", new Object[]{message.getKey()});
-		persistence.remove(getSendBufferedPersistenceKey(message));
+		try{
+			//@TRACE 517=Un-Persisting Buffered message key={0}
+			log.fine(CLASS_NAME,methodName, "517", new Object[]{message.getKey()});
+			persistence.remove(getSendBufferedPersistenceKey(message));
+		} catch (MqttPersistenceException mpe){
+			//@TRACE 518=Failed to Un-Persist Buffered message key={0}
+			log.fine(CLASS_NAME,methodName, "518", new Object[]{message.getKey()});
+		}
+		
 	}
 	
 	/**
 	 * This removes the MqttSend message from the outbound queue and persistence.
-	 * @param message
-	 * @throws MqttPersistenceException
+	 * @param message the {@link MqttPublish} message to be removed
+	 * @throws MqttPersistenceException if an exception occurs whilst removing the message
 	 */
 	protected void undo(MqttPublish message) throws MqttPersistenceException {
 		final String methodName = "undo";
 		synchronized (queueLock) {
 			//@TRACE 618=key={0} QoS={1} 
-			log.fine(CLASS_NAME,methodName,"618", new Object[]{new Integer(message.getMessageId()), new Integer(message.getMessage().getQos())});
+			log.fine(CLASS_NAME,methodName,"618", new Object[]{ Integer.valueOf(message.getMessageId()),  Integer.valueOf(message.getMessage().getQos())});
 			
 			if (message.getMessage().getQos() == 1) {
-				outboundQoS1.remove(new Integer(message.getMessageId()));
+				outboundQoS1.remove( Integer.valueOf(message.getMessageId()));
 			} else {
-				outboundQoS2.remove(new Integer(message.getMessageId()));
+				outboundQoS2.remove( Integer.valueOf(message.getMessageId()));
 			}
 			pendingMessages.removeElement(message);
 			persistence.remove(getSendPersistenceKey(message));
 			tokenStore.removeToken(message);
+			if(message.getMessage().getQos() > 0){
+				//Free this message Id so it can be used again
+				releaseMessageId(message.getMessageId());
+				//Set the messageId to 0 so if it's ever retried, it will get a new messageId
+				message.setMessageId(0);
+			}
+
 			checkQuiesceLock();
 		}
+	}
+	
+	/**
+	 * This removes the MqttSend message from the outbound queue and persistence.
+	 * @param token The {@link IMqttDeliveryToken} for the message to remove
+	 * @return if the message is removed, then true, otherwise false
+	 * @throws MqttException if an exception occurs whilst removing the message
+	 */
+	protected boolean removeMessage(IMqttDeliveryToken token) throws MqttException {
+		final String methodName = "removeMessage";
+		MqttMessage message = token.getMessage();
+		int messageId = token.getMessageId();
+		boolean result = false;
+		synchronized (queueLock) {
+			if (message.getQos() == 1) {
+				if (outboundQoS1.remove( Integer.valueOf(messageId)) != null) {
+					result = true;
+				}
+			}
+			if (message.getQos() == 2) {
+				if (outboundQoS2.remove( Integer.valueOf(messageId)) != null) {
+					result = true;
+				}
+			}
+			if (pendingMessages.removeElement(message)) {
+				result = true;
+			}
+			persistence.remove(getSendPersistenceKey(messageId));
+			String key =  Integer.toString(messageId);
+			tokenStore.removeToken(key);
+			releaseMessageId(messageId);
+		}
+		return result;
 	}
 	
 	/**
@@ -620,8 +697,9 @@ public class ClientState {
 	 * 
 	 * If a ping has been sent but no data has been received in the 
 	 * last keepalive interval then the connection is deamed to be broken. 
-	 * 
+	 * @param pingCallback The {@link IMqttActionListener} to be called
 	 * @return token of ping command, null if no ping command has been sent.
+	 * @throws MqttException if an exception occurs during the Ping
 	 */
 	public MqttToken checkForActivity(IMqttActionListener pingCallback) throws MqttException {
 		final String methodName = "checkForActivity";
@@ -637,13 +715,14 @@ public class ClientState {
         }
 
 		MqttToken token = null;
-		long nextPingTime = getKeepAlive();
+		long nextPingTime = this.keepAlive;
 		
 		if (connected && this.keepAlive > 0) {
-			long time = System.currentTimeMillis();
+			long time = System.nanoTime();
+			// Below might not be necessary since move to nanoTime (Issue #278)
 			//Reduce schedule frequency since System.currentTimeMillis is no accurate, add a buffer
 			//It is 1/10 in minimum keepalive unit.
-			int delta = 100;
+			int delta = 100000;
 			
 			// ref bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=446663
             synchronized (pingOutstandingLock) {
@@ -651,10 +730,11 @@ public class ClientState {
                 // Is the broker connection lost because the broker did not reply to my ping?                                                                                                                                 
                 if (pingOutstanding > 0 && (time - lastInboundActivity >= keepAlive + delta)) {
                     // lastInboundActivity will be updated once receiving is done.                                                                                                                                        
-                    // Add a delta, since the timer and System.currentTimeMillis() is not accurate.                                                                                                                        
+                    // Add a delta, since the timer and System.currentTimeMillis() is not accurate.     
+                		// TODO - Remove Delta, maybe?
                 	// A ping is outstanding but no packet has been received in KA so connection is deemed broken                                                                                                         
                     //@TRACE 619=Timed out as no activity, keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2} time={3} lastPing={4}                                                                           
-                    log.severe(CLASS_NAME,methodName,"619", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                    log.severe(CLASS_NAME,methodName,"619", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity),  Long.valueOf(time),  Long.valueOf(lastPing)});
 
                     // A ping has already been sent. At this point, assume that the                                                                                                                                       
                     // broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -665,7 +745,7 @@ public class ClientState {
                 if (pingOutstanding == 0 && (time - lastOutboundActivity >= 2*keepAlive)) {
                     
                     // I am probably blocked on a write operations as I should have been able to write at least a ping message                                                                                                    
-                	log.severe(CLASS_NAME,methodName,"642", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                	log.severe(CLASS_NAME,methodName,"642", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity),  Long.valueOf(time),  Long.valueOf(lastPing)});
 
                     // A ping has not been sent but I am not progressing on the current write operation. 
                 	// At this point, assume that the broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -685,7 +765,7 @@ public class ClientState {
                     (time - lastOutboundActivity >= keepAlive - delta)) {
 
                     //@TRACE 620=ping needed. keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2}                                                                                                              
-                    log.fine(CLASS_NAME,methodName,"620", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity)});
+                    log.fine(CLASS_NAME,methodName,"620", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity)});
 
                     // pingOutstanding++;  // it will be set after the ping has been written on the wire                                                                                                             
                     // lastPing = time;    // it will be set after the ping has been written on the wire                                                                                                             
@@ -702,12 +782,13 @@ public class ClientState {
                     notifyQueueLock();
                 }
                 else {
+                		//@TRACE 634=ping not needed yet. Schedule next ping.
                     log.fine(CLASS_NAME, methodName, "634", null);
-                    nextPingTime = Math.max(1, getKeepAlive() - (time - lastOutboundActivity));
+                    nextPingTime = Math.max(1,  getKeepAlive() - (time - lastOutboundActivity));
                 }
             }
             //@TRACE 624=Schedule next ping at {0}                                                                                                                                                                                
-            log.fine(CLASS_NAME, methodName,"624", new Object[]{new Long(nextPingTime)});
+            log.fine(CLASS_NAME, methodName,"624", new Object[]{Long.valueOf(nextPingTime)});
             pingSender.schedule(nextPingTime);
 		}
 		
@@ -721,8 +802,9 @@ public class ClientState {
 	 *  - there is a message to be sent
 	 *  - the keepAlive interval is exceeded, which triggers a ping message
 	 *    to be returned
-	 *  - {@link #disconnected(MqttException, boolean)} is called
+	 *  - {@link ClientState#disconnected(MqttException)} is called
 	 * @return the next message to send, or null if the client is disconnected
+	 * @throws MqttException if an exception occurs whilst returning the next piece of work
 	 */
 	protected MqttWireMessage get() throws MqttException {
 		final String methodName = "get";
@@ -751,8 +833,8 @@ public class ClientState {
 				// Handle the case where not connected. This should only be the case if: 
 				// - in the process of disconnecting / shutting down
 				// - in the process of connecting
-				if (!connected && 
-						(pendingFlows.isEmpty() || !((MqttWireMessage)pendingFlows.elementAt(0) instanceof MqttConnect))) {
+				if (pendingFlows == null || (!connected && 
+						(pendingFlows.isEmpty() || !((MqttWireMessage)pendingFlows.elementAt(0) instanceof MqttConnect)))) {
 					//@TRACE 621=no outstanding flows and not connected
 					log.fine(CLASS_NAME,methodName,"621");
 					
@@ -773,7 +855,7 @@ public class ClientState {
 						inFlightPubRels++;
 
 						//@TRACE 617=+1 inflightpubrels={0}
-						log.fine(CLASS_NAME,methodName,"617", new Object[]{new Integer(inFlightPubRels)});
+						log.fine(CLASS_NAME,methodName,"617", new Object[]{ Integer.valueOf(inFlightPubRels)});
 					}
 		
 					checkQuiesceLock();
@@ -789,7 +871,7 @@ public class ClientState {
 						actualInFlight++;
 	
 						//@TRACE 623=+1 actualInFlight={0}
-						log.fine(CLASS_NAME,methodName,"623",new Object[]{new Integer(actualInFlight)});
+						log.fine(CLASS_NAME,methodName,"623",new Object[]{ Integer.valueOf(actualInFlight)});
 					} else {
 						//@TRACE 622=inflight window full
 						log.fine(CLASS_NAME,methodName,"622");				
@@ -804,75 +886,43 @@ public class ClientState {
 		this.keepAlive = interval;
 	}
 	
-	/**
-	 * COMMENTED OUT AS NO LONGER USED.
-	 * Deduce how long to to wait until a ping is required.
-	 * 
-	 * In order to keep the connection alive the server must see activity within 
-	 * the keepalive interval. If the application is not sending / receiving
-	 * any messages then the client will send a ping.  This method works out
-	 * the next time that a ping must be sent in order for the server to 
-	 * know the client is alive.
-	 * @return  time before a ping needs to be sent to keep alive the connection
-	long getTimeUntilPing() {
-		long pingin = getKeepAlive();
-		// If KA is zero which means just wait for work or 
-		// if a ping is outstanding return the KA value
-		if (connected && (getKeepAlive() > 0) && !pingOutstanding) {
-		
-			long time = System.currentTimeMillis();
-			long timeSinceOut = (time-lastOutboundActivity);
-			long timeSinceIn = (time-lastInboundActivity);
-			
-			if (timeSinceOut > timeSinceIn) {
-				pingin = (getKeepAlive()-timeSinceOut);
-			} else {
-				pingin = (getKeepAlive()-timeSinceIn);
-			}
-			
-			// Unlikely to be negative or zero but in the case it is return a 
-			// small value > 0 to cause a ping to occur
-			if (pingin <= 0) {
-				pingin = 10;
-			}
-		}
-		return (pingin);
-	}
-	 */
-	
     public void notifySentBytes(int sentBytesCount) {
         final String methodName = "notifySentBytes";
         if (sentBytesCount > 0) {
-        	this.lastOutboundActivity = System.currentTimeMillis();
+        	this.lastOutboundActivity = System.nanoTime();
         }
         // @TRACE 643=sent bytes count={0}                                                                                                                                                                                            
         log.fine(CLASS_NAME, methodName, "643", new Object[] {
-        		 new Integer(sentBytesCount) });
+        		  Integer.valueOf(sentBytesCount) });
     }
 
 	
 	/**
 	 * Called by the CommsSender when a message has been sent
-	 * @param message
+	 * @param message the {@link MqttWireMessage} to notify
 	 */
 	protected void notifySent(MqttWireMessage message) {
 		final String methodName = "notifySent";
 		
-		this.lastOutboundActivity = System.currentTimeMillis();
+		this.lastOutboundActivity = System.nanoTime();
 		//@TRACE 625=key={0}
 		log.fine(CLASS_NAME,methodName,"625",new Object[]{message.getKey()});
 		
-		MqttToken token = tokenStore.getToken(message);
+		MqttToken token = message.getToken();
+		if (token == null) {
+			token = tokenStore.getToken(message);
+			if (token == null) return;
+		}
 		token.internalTok.notifySent();
         if (message instanceof MqttPingReq) {
             synchronized (pingOutstandingLock) {
-            	long time = System.currentTimeMillis();
+            	long time = System.nanoTime();
                 synchronized (pingOutstandingLock) {
                 	lastPing = time;
                 	pingOutstanding++;
                 }
                 //@TRACE 635=ping sent. pingOutstanding: {0}                                                                                                                                                                  
-                log.fine(CLASS_NAME,methodName,"635",new Object[]{ new Integer(pingOutstanding)});
+                log.fine(CLASS_NAME,methodName,"635",new Object[]{  Integer.valueOf(pingOutstanding)});
             }
         }
         else if (message instanceof MqttPublish) {
@@ -894,7 +944,7 @@ public class ClientState {
 		synchronized (queueLock) {
 			actualInFlight--;
 			//@TRACE 646=-1 actualInFlight={0}
-			log.fine(CLASS_NAME,methodName,"646",new Object[]{new Integer(actualInFlight)});
+			log.fine(CLASS_NAME,methodName,"646",new Object[]{ Integer.valueOf(actualInFlight)});
 			
 			if (!checkQuiesceLock()) {
 				queueLock.notifyAll();
@@ -908,7 +958,7 @@ public class ClientState {
 		int tokC = tokenStore.count();
 		if (quiescing && tokC == 0 && pendingFlows.size() == 0 && callback.isQuiesced()) {
 			//@TRACE 626=quiescing={0} actualInFlight={1} pendingFlows={2} inFlightPubRels={3} callbackQuiesce={4} tokens={5}
-			log.fine(CLASS_NAME,methodName,"626",new Object[]{new Boolean(quiescing), new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()), new Integer(tokC)});
+			log.fine(CLASS_NAME,methodName,"626",new Object[]{ Boolean.valueOf(quiescing),  Integer.valueOf(actualInFlight),  Integer.valueOf(pendingFlows.size()),  Integer.valueOf(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()),  Integer.valueOf(tokC)});
 			synchronized (quiesceLock) {
 				quiesceLock.notifyAll();
 			}
@@ -920,26 +970,26 @@ public class ClientState {
     public void notifyReceivedBytes(int receivedBytesCount) {
         final String methodName = "notifyReceivedBytes";
         if (receivedBytesCount > 0) {
-            this.lastInboundActivity = System.currentTimeMillis();
+            this.lastInboundActivity = System.nanoTime();
         }
         // @TRACE 630=received bytes count={0}                                                                                                                                                                                        
         log.fine(CLASS_NAME, methodName, "630", new Object[] {
-                 new Integer(receivedBytesCount) });
+                  Integer.valueOf(receivedBytesCount) });
     }
 
     /**
 	 * Called by the CommsReceiver when an ack has arrived. 
 	 * 
-	 * @param message
-	 * @throws MqttException
+	 * @param ack The {@link MqttAck} that has arrived
+	 * @throws MqttException if an exception occurs when sending / notifying
 	 */
 	protected void notifyReceivedAck(MqttAck ack) throws MqttException {
 		final String methodName = "notifyReceivedAck";
-		this.lastInboundActivity = System.currentTimeMillis();
+		this.lastInboundActivity = System.nanoTime();
 
 		// @TRACE 627=received key={0} message={1}
 		log.fine(CLASS_NAME, methodName, "627", new Object[] {
-				new Integer(ack.getMessageId()), ack });
+				 Integer.valueOf(ack.getMessageId()), ack });
 
 		MqttToken token = tokenStore.getToken(ack);
 		MqttException mex = null;
@@ -947,7 +997,7 @@ public class ClientState {
 		if (token == null) {
 			// @TRACE 662=no message found for ack id={0}
 			log.fine(CLASS_NAME, methodName, "662", new Object[] {
-					new Integer(ack.getMessageId())});
+					 Integer.valueOf(ack.getMessageId())});
 		} else if (ack instanceof MqttPubRec) {
 			// Complete the QoS 2 flow. Unlike all other
 			// flows, QoS is a 2 phase flow. The second phase sends a
@@ -970,7 +1020,7 @@ public class ClientState {
                 }
             }
             //@TRACE 636=ping response received. pingOutstanding: {0}                                                                                                                                                     
-            log.fine(CLASS_NAME,methodName,"636",new Object[]{ new Integer(pingOutstanding)});
+            log.fine(CLASS_NAME,methodName,"636",new Object[]{  Integer.valueOf(pingOutstanding)});
 		} else if (ack instanceof MqttConnack) {
 			int rc = ((MqttConnack) ack).getReturnCode();
 			if (rc == 0) {
@@ -1000,7 +1050,6 @@ public class ClientState {
 				queueLock.notifyAll();
 			}
 		} else {
-			// Sub ack or unsuback
 			notifyResult(ack, token, mex);
 			releaseMessageId(ack.getMessageId());
 			tokenStore.removeToken(ack);
@@ -1013,16 +1062,16 @@ public class ClientState {
 	 * Called by the CommsReceiver when a message has been received.
 	 * Handles inbound messages and other flows such as PUBREL. 
 	 * 
-	 * @param message
-	 * @throws MqttException
+	 * @param message The {@link MqttWireMessage} that has been received
+	 * @throws MqttException when an exception occurs whilst notifying
 	 */
 	protected void notifyReceivedMsg(MqttWireMessage message) throws MqttException {
 		final String methodName = "notifyReceivedMsg";
-		this.lastInboundActivity = System.currentTimeMillis();
+		this.lastInboundActivity = System.nanoTime();
 
 		// @TRACE 651=received key={0} message={1}
 		log.fine(CLASS_NAME, methodName, "651", new Object[] {
-				new Integer(message.getMessageId()), message });
+				 Integer.valueOf(message.getMessageId()), message });
 		
 		if (!quiescing) {
 			if (message instanceof MqttPublish) {
@@ -1037,7 +1086,7 @@ public class ClientState {
 				case 2:
 					persistence.put(getReceivedPersistenceKey(message),
 							(MqttPublish) message);
-					inboundQoS2.put(new Integer(send.getMessageId()), send);
+					inboundQoS2.put( Integer.valueOf(send.getMessageId()), send);
 					this.send(new MqttPubRec(send), null);
 					break;
 
@@ -1046,7 +1095,7 @@ public class ClientState {
 				}
 			} else if (message instanceof MqttPubRel) {
 				MqttPublish sendMsg = (MqttPublish) inboundQoS2
-						.get(new Integer(message.getMessageId()));
+						.get( Integer.valueOf(message.getMessageId()));
 				if (sendMsg != null) {
 					if (callback != null) {
 						callback.messageArrived(sendMsg);
@@ -1068,8 +1117,8 @@ public class ClientState {
 	 * persistence and counters adjusted accordingly. Also tidy up by removing
 	 * token from store...
 	 * 
-	 * @param message
-	 * @throws MqttException
+	 * @param token The {@link MqttToken} that will be used to notify
+	 * @throws MqttException if an exception occurs during notification
 	 */
 	protected void notifyComplete(MqttToken token) throws MqttException {
 		
@@ -1081,7 +1130,7 @@ public class ClientState {
 			
 			// @TRACE 629=received key={0} token={1} message={2}
 			log.fine(CLASS_NAME, methodName, "629", new Object[] {
-					 new Integer(message.getMessageId()), token, message });
+					  Integer.valueOf(message.getMessageId()), token, message });
 
 			MqttAck ack = (MqttAck) message;
 
@@ -1089,18 +1138,20 @@ public class ClientState {
 				
 				// QoS 1 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
-				outboundQoS1.remove(new Integer(ack.getMessageId()));
+				persistence.remove(getSendBufferedPersistenceKey(message));
+				outboundQoS1.remove(Integer.valueOf(ack.getMessageId()));
 				decrementInFlight();
 				releaseMessageId(message.getMessageId());
 				tokenStore.removeToken(message);
 				// @TRACE 650=removed Qos 1 publish. key={0}
 				log.fine(CLASS_NAME, methodName, "650",
-						new Object[] { new Integer(ack.getMessageId()) });
+						new Object[] {  Integer.valueOf(ack.getMessageId()) });
 			} else if (ack instanceof MqttPubComp) {
 				// QoS 2 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
 				persistence.remove(getSendConfirmPersistenceKey(message));
-				outboundQoS2.remove(new Integer(ack.getMessageId()));
+				persistence.remove(getSendBufferedPersistenceKey(message));
+				outboundQoS2.remove( Integer.valueOf(ack.getMessageId()));
 
 				inFlightPubRels--;
 				decrementInFlight();
@@ -1109,8 +1160,8 @@ public class ClientState {
 
 				// @TRACE 645=removed QoS 2 publish/pubrel. key={0}, -1 inFlightPubRels={1}
 				log.fine(CLASS_NAME, methodName, "645", new Object[] {
-						new Integer(ack.getMessageId()),
-						new Integer(inFlightPubRels) });
+						 Integer.valueOf(ack.getMessageId()),
+						 Integer.valueOf(inFlightPubRels) });
 			}
 
 			checkQuiesceLock();
@@ -1157,6 +1208,7 @@ public class ClientState {
 	 * is tidied up so it only contains outstanding delivery tokens which are
 	 * valid after reconnect (if clean session is false)
 	 * @param reason The root cause of the disconnection, or null if it is a clean disconnect
+	 * @return {@link Vector} 
 	 */
 	public Vector resolveOldTokens(MqttException reason) {
 		final String methodName = "resolveOldTokens";
@@ -1227,7 +1279,7 @@ public class ClientState {
 	 * @param msgId A message ID that can be freed up for re-use.
 	 */
 	private synchronized void releaseMessageId(int msgId) {
-		inUseMsgIds.remove(new Integer(msgId));
+		inUseMsgIds.remove( Integer.valueOf(msgId));
 	}
 
 	/**
@@ -1252,8 +1304,8 @@ public class ClientState {
 	        		throw ExceptionHelper.createMqttException(MqttException.REASON_CODE_NO_MESSAGE_IDS_AVAILABLE);
 	        	}
 	        }
-	    } while( inUseMsgIds.containsKey( new Integer(nextMsgId) ) );
-	    Integer id = new Integer(nextMsgId);
+	    } while( inUseMsgIds.containsKey(  Integer.valueOf(nextMsgId) ) );
+	    Integer id =  Integer.valueOf(nextMsgId);
 	    inUseMsgIds.put(id, id);
 	    return nextMsgId;
 	}
@@ -1263,13 +1315,14 @@ public class ClientState {
 	 * and preventing the callback on any newly received messages.
 	 * After the timeout expires, delete any pending messages except for
 	 * outbound ACKs, and wait for those ACKs to complete.
+	 * @param timeout How long to wait during Quiescing
 	 */
 	public void quiesce(long timeout) {
 		final String methodName = "quiesce";
 		// If the timeout is greater than zero t
 		if (timeout > 0 ) {
 			//@TRACE 637=timeout={0}
-			log.fine(CLASS_NAME,methodName, "637",new Object[]{new Long(timeout)});
+			log.fine(CLASS_NAME,methodName, "637",new Object[]{ Long.valueOf(timeout)});
 			synchronized (queueLock) {
 				this.quiescing = true;
 			}
@@ -1285,7 +1338,7 @@ public class ClientState {
 					int tokc = tokenStore.count();
 					if (tokc > 0 || pendingFlows.size() >0 || !callback.isQuiesced()) {
 						//@TRACE 639=wait for outstanding: actualInFlight={0} pendingFlows={1} inFlightPubRels={2} tokens={3}
-						log.fine(CLASS_NAME, methodName,"639", new Object[]{new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), new Integer(tokc)});
+						log.fine(CLASS_NAME, methodName,"639", new Object[]{ Integer.valueOf(actualInFlight),  Integer.valueOf(pendingFlows.size()),  Integer.valueOf(inFlightPubRels),  Integer.valueOf(tokc)});
 
 						// wait for outstanding in flight messages to complete and
 						// any pending flows to complete
@@ -1323,20 +1376,20 @@ public class ClientState {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(message.getMessageId())});
+		log.fine(CLASS_NAME,methodName,"641", new Object[]{ Integer.valueOf(message.getMessageId())});
 		
 		persistence.remove(getReceivedPersistenceKey(message));
-		inboundQoS2.remove(new Integer(message.getMessageId()));
+		inboundQoS2.remove( Integer.valueOf(message.getMessageId()));
 	}
 	
 	protected void deliveryComplete(int messageId) throws MqttPersistenceException {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(messageId)});
+		log.fine(CLASS_NAME,methodName,"641", new Object[]{ Integer.valueOf(messageId)});
 		
 		persistence.remove(getReceivedPersistenceKey(messageId));
-		inboundQoS2.remove(new Integer(messageId));
+		inboundQoS2.remove( Integer.valueOf(messageId));
 	}
 	
 	public int getActualInFlight(){
@@ -1354,7 +1407,9 @@ public class ClientState {
 	 */
 	protected void close() {
 		inUseMsgIds.clear();
-		pendingMessages.clear();
+		if (pendingMessages != null) {
+			pendingMessages.clear();
+		}
 		pendingFlows.clear();
 		outboundQoS2.clear();
 		outboundQoS1.clear();
@@ -1380,14 +1435,14 @@ public class ClientState {
 		props.put("In use msgids", inUseMsgIds);
 		props.put("pendingMessages", pendingMessages);
 		props.put("pendingFlows", pendingFlows);
-		props.put("maxInflight", new Integer(maxInflight));
-		props.put("nextMsgID", new Integer(nextMsgId));
-		props.put("actualInFlight", new Integer(actualInFlight));
-		props.put("inFlightPubRels", new Integer(inFlightPubRels));
+		props.put("maxInflight",  Integer.valueOf(maxInflight));
+		props.put("nextMsgID",  Integer.valueOf(nextMsgId));
+		props.put("actualInFlight",  Integer.valueOf(actualInFlight));
+		props.put("inFlightPubRels",  Integer.valueOf(inFlightPubRels));
 		props.put("quiescing", Boolean.valueOf(quiescing));
-		props.put("pingoutstanding", new Integer(pingOutstanding));
-		props.put("lastOutboundActivity", new Long(lastOutboundActivity));
-		props.put("lastInboundActivity", new Long(lastInboundActivity));
+		props.put("pingoutstanding",  Integer.valueOf(pingOutstanding));
+		props.put("lastOutboundActivity",  Long.valueOf(lastOutboundActivity));
+		props.put("lastInboundActivity",  Long.valueOf(lastInboundActivity));
 		props.put("outboundQoS2", outboundQoS2);
 		props.put("outboundQoS1", outboundQoS1);
 		props.put("outboundQoS0", outboundQoS0);
