@@ -61,13 +61,12 @@ public class ConnOpts extends JPanel implements ActionListener {
     private JTextArea  lwtData;
     private JCheckBox  lwtRetain;
     private JComboBox  lwtQoS;
-	private Integer[]  qos = { new Integer(0), new Integer(1), new Integer(2) };
+	private Integer[]  qos = { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) };
     
 	/**
 	 * Constructor for ConnOpts. The constructor builds all the GUI objects required and creates the
 	 * dialog in hidden mode ready to be made visible when required.
-	 * @param owner Required by the JDialog superclass
-	 * @param title The text displayed in the window title bar. Required by the JDialog superclass.
+	 *
 	 * @param mgr The object that manages the MQIsdp connection
 	 * @param props The properties object created from the config file on disk
 	 */
